--- a/src/pages/_index/ColorStrip.astro
+++ b/src/pages/_index/ColorStrip.astro
@@ -18,7 +18,8 @@
     justify-content: center;
     align-items: center;
     gap: var(--bar-size);
-    padding: 8px;
+    padding-inline: 8px;
+    padding-block: 10px;
   }
   
   .bar {
@@ -48,7 +49,7 @@
   @media (min-width: 600px) {
     .grid-container {
       display: grid;
-      grid-template-columns: 1fr 3rem 1.2fr;
+      grid-template-columns: 0.9fr 3rem 1.2fr;
     }
   }
 </style>
