--- a/src/_layouts/blog-post.pug
+++ b/src/_layouts/blog-post.pug
@@ -19,4 +19,4 @@ article(data-page=slinkit.page)
       img(src="/assets/images/me.jpg" alt="Hand drawn portrait of Ben Holmes")
       div
         address #[a(rel="author" href="/") Ben Holmes ]
-        | is a web developer + UI designer by trade from Charleston SC. He's been tinkering with JavaScript and CSS since 2014, and has lead a #[a(href="https://hack4impact.org/dev-bootcamp") full stack bootcamp curriculum] used by universities across the country. Now, he's working fulltime at Peloton and teaching the world a bit of web whimsy in his spare time.
+        | is a web developer + UI designer by trade from Charleston SC. He's been tinkering with JavaScript and CSS since 2014, and has lead a #[a(href="https://hack4impact.org/dev-bootcamp") full stack bootcamp curriculum] used by universities across the country. Now, he's a full-time open source developer at #[a(href="https://astro.build") Astro] and recording #[a(href="https://wtw.dev") #WhiteboardTheWeb] in his spare time.
