--- a/src/index.pug
+++ b/src/index.pug
@@ -61,17 +61,17 @@ section#inbrief-section
 
     .content__personal
       :markdown-it
-        I first got into software development not through algorithms, not unit testing, not objected-oriented principles... none of the hirable buzzwords. Back in high school, I was wrestling with Java concepts because _I love making shiny pixels move around on a screen._
+        Hey there! I’m Ben, a software dev from Charleston SC, USA, learning how cold the northeast can be. You can call me a “traditional” software developer by trade given my [BS in CS](https://www.cc.gatech.edu/degree-programs/bachelor-science-computer-science) from Georgia Tech (go Jackets!). Today, I’ve channeled this technical know-how into open source web development as a full-time maintainer at [Astro](https://astro.build).
 
-        Back then, it was in the pursuit of inefficient, spaghetti-coded video games. Now, I've channeled a love for graphics into _**web development and design**_. I spent most of my time at Georgia Tech figuring out the sexiest frameworks to use, the most impactful way to apply my novice knowledge, and how to teach others at a beginner's level. I'm just entering the working world as an adult-in-denial, so I hope [my lessons learned along the way](https://dev.to/bholmesdev) end up helping you!
+        My core values are **be caring, be clear, and be casual.** Tech is a scary industry to jump into, especially without a sense of humor to keep your head on straight. So as long as I’m a web developer, my goal is to [teach](#i-teach) and [build](#i-create) tools that help others become the best version of themselves. Well, assuming we adhere to [semantic versioning principles](https://semver.org/) 😉
 
     .content__recruiter
       :markdown-it
-        Sorry! I'm currently employed at [Peloton](https://onepeloton.com), so I'm not looking for a job right now.
+        I'm a full-time software developer at [the Astro Technology Company](https://astro.build), so I'm not looking for employment right now.
 
-        Still, here's all my skills / buzzwords you were going to search for: **NodeJS, ES6, ReactJS, JAMStack, NextJS, semantic HTML, understanding of a11y, Angular 2+, SvelteJS, SCSS, NoSQL, OOP programming, C Basic, unit testing w/ Jest**... Okay I'm getting tired typing.
+        Still, here's all my skills / buzzwords you were going to search for: **NodeJS, ES6, ReactJS, NextJS, semantic HTML, understanding of a11y, Angular 2+, SolidJS, SvelteJS, SCSS, NoSQL, OOP programming, C Basic, unit testing w/ Jest**... Okay I'm getting tired typing.
 
-        [Just take my resume](https://drive.google.com/file/d/1_Dix3-mAHaPVNEB2xIZeZ9RMkZRJ0A8O/view?usp=sharing)
+        [Just browse my LinkedIn](https://www.linkedin.com/in/bholmesdev/)
 
 div#iteach-section(style="--section-color: var(--red)")
   section.section__summary
@@ -133,8 +133,8 @@ div#icreate-section(style="--section-color: var(--purple)")
     div
       p In brief...
       :markdown-it
-        - Full-time frontend dev at **Peloton**
-        - Framework-agnostic web developer, currently hyped for **SvelteJS**
+        - Full-time open source developer at [**Astro**](https://astro.build)
+        - Framework-agnostic web developer, currently hyped for **islands architecture**
         - Social good advocate: former **Bits of Good** Director of Engineering, **Impact Labs** contributor
 
   section.subsection
