--- a/src/_layouts/index.pug
+++ b/src/_layouts/index.pug
@@ -103,6 +103,6 @@ html(lang="en-US")
                 +icon('twitter')
               a(href="https://github.com/holben888" target="_blank" rel="noreferrer" aria-label="Ben's GitHub")
                 +icon('github')
-            p Follow along with #[strong Ben] for the fun, for the whimsy, and for the love of building websites ♥ 
+            p Follow along with #[strong Ben] for the fun, for the whiteboards, and for the love of building websites ♥ 
 
   | !{slinkit.scripts}
