--- a/src/index.pug
+++ b/src/index.pug
@@ -23,10 +23,10 @@ section#header-section
 .newsletter-callout__container
   section#newsletter-callout
     .newsletter-callout__heading
-      h2.omit-from-toc Join the web wizardry newsletter
+      h2.omit-from-toc Join the #WhiteboardTheWeb newsletter
       include crystal-ball.svg
     p.newsletter-callout__tagline Written by a Top 500 author on dev.to
-    p You'll learn <strong>universal solutions</strong> to common web developer problems, no matter your frontend framework of choice. Preview the <a href="https://tinyletter.com/bholmesdev/letters/">latest issue here</a>!
+    p Get the latest #[a(href="https://wtw.dev") #WhiteboardTheWeb] videos in your inbox! These one minute explainers are the perfect taste of web trends for busy developers. Preview the <a href="https://tinyletter.com/bholmesdev/letters/">latest issue here</a>.
     form.newsletter-callout__input(action='https://tinyletter.com/bholmesdev' method='post' target='_blank')
       input(type="email" name="email" placeholder="fellowsorceror@webwizardry.club" aria-label="email" required)
       button(type="submit")
@@ -79,9 +79,9 @@ div#iteach-section(style="--section-color: var(--red)")
     div
       p In brief...
       :markdown-it
-        - Learning web dev is confusing / ever-changing and I want to help
-        - Top 500 author on DEV (thx readers!)
-        - Built a fullstack bootcamp with online resources + in-person workshops
+        - Creator of [#WhiteboardTheWeb](https://wtw.dev) video series
+        - Top 500 author on DEV.to
+        - Built a fullstack bootcamp with in-person workshops
 
   section.subsection
     - var blogPosts = [...collections.blogPost].reverse().filter(post => !post.data.omitFromHomePage)
