update: header list

--- a/src/index.pug
+++ b/src/index.pug
@@ -11,9 +11,9 @@ section#header-section
     h1 Ben Holmes
     ul
       li Web dev
-      li UX freak
-      li Blogger
-      li Charcoal fan
+      li Whiteboardist
+      li Speaker
+      li Streamer
 
     a.header-section__cta(href="#inbrief-section" aria-labelledby="more-about-me") 
       span(id="more-about-me") More about me
