--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
-import "@fontsource/atkinson-hyperlegible";
+import "@fontsource/atkinson-hyperlegible/400.css";
+import "@fontsource/atkinson-hyperlegible/700.css";
 ---
 
 <!DOCTYPE html>
@@ -7,6 +8,8 @@ import "@fontsource/atkinson-hyperlegible";
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="/fonts.css" />
+        <link rel="stylesheet" href="/normalize.css" />
         <title>Document</title>
     </head>
     <body>
@@ -29,6 +32,14 @@ import "@fontsource/atkinson-hyperlegible";
         --font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
         --font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
 
+        --font-heading: "Chicago", system-ui, -apple-system, BlinkMacSystemFont,
+            "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+            "Helvetica Neue", sans-serif;
+
+        --font-body: "Atkinson Hyperlegible", system-ui, -apple-system,
+            BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+            "Open Sans", "Helvetica Neue", sans-serif;
+
         /* Text color */
         --text-1: var(--gray-1);
         --text-2: var(--gray-2);
@@ -45,9 +56,8 @@ import "@fontsource/atkinson-hyperlegible";
         --text-body: var(--text-11);
     }
     body {
-        font-family: "Atkinson Hyperlegible", system-ui, -apple-system,
-            BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-            "Open Sans", "Helvetica Neue", sans-serif;
-        color: var(--text-11);
+        font-family: var(--font-body);
+        color: var(--text-body);
+        font-size: var(--font-size-base);
     }
 </style>
