--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,8 @@ import Heading from "../components/Heading.astro";
 
 <style>
     main {
-        max-width: 60ch;
+        max-width: 50ch;
+        margin: auto;
         font-size: var(--font-size-md);
     }
 </style>
