--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,72 +1,83 @@
 ---
 import "@fontsource/atkinson-hyperlegible/400.css";
 import "@fontsource/atkinson-hyperlegible/700.css";
+import Nav from "../components/Nav.astro";
 ---
 
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/fonts.css" />
-        <link rel="stylesheet" href="/normalize.css" />
-        <title>Document</title>
-    </head>
-    <body>
-        <slot />
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/fonts.css" />
+    <link rel="stylesheet" href="/normalize.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <Nav />
+    <slot />
+  </body>
 </html>
 
 <style is:global>
-    @import "open-props/style";
+  @import "open-props/style";
 
-    :root {
-        --green: #24ac6c;
-        --orange: #e46a4e;
-        --purple: #7931e3;
-        --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
-        --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
-        --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
-        --font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
-        --font-size-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
-        --font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
-        --font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
+  :root {
+    --green: #24ac6c;
+    --orange: #e46a4e;
+    --purple: #7931e3;
+    --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
+    --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
+    --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
+    --font-size-lg: clamp(1.56rem, 1vw + 1.31rem, 2.11rem);
+    --font-size-xl: clamp(1.95rem, 1.56vw + 1.56rem, 2.81rem);
+    --font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
+    --font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
 
-        --font-heading: "Chicago", system-ui, -apple-system, BlinkMacSystemFont,
-            "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-            "Helvetica Neue", sans-serif;
+    --font-heading: "Chicago", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
 
-        --font-body: "Atkinson Hyperlegible", system-ui, -apple-system,
-            BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-            "Open Sans", "Helvetica Neue", sans-serif;
+    --font-body: "Atkinson Hyperlegible", system-ui, -apple-system,
+      BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+      "Open Sans", "Helvetica Neue", sans-serif;
 
-        /* Text color */
-        --text-1: var(--gray-1);
-        --text-2: var(--gray-2);
-        --text-3: var(--gray-3);
-        --text-4: var(--gray-4);
-        --text-5: var(--gray-5);
-        --text-6: var(--gray-6);
-        --text-7: var(--gray-7);
-        --text-8: var(--gray-8);
-        --text-9: var(--gray-9);
-        --text-10: var(--gray-10);
-        --text-11: var(--gray-11);
+    /* Text color */
+    --text-1: var(--gray-1);
+    --text-2: var(--gray-2);
+    --text-3: var(--gray-3);
+    --text-4: var(--gray-4);
+    --text-5: var(--gray-5);
+    --text-6: var(--gray-6);
+    --text-7: var(--gray-7);
+    --text-8: var(--gray-8);
+    --text-9: var(--gray-9);
+    --text-10: var(--gray-10);
+    --text-11: var(--gray-11);
 
-        --text-body: var(--text-11);
-        --bg: white;
-    }
-    body {
-        font-family: var(--font-body);
-        color: var(--text-body);
-        font-size: var(--font-size-base);
-    }
-    h1, h2 {
-        font-family: var(--font-heading);
-    }
+    --text-body: var(--text-11);
+    --bg: white;
 
-    a, a:visited {
-        color: var(--accent);
-        text-decoration: underline dashed;
-    }
+    --body-color-dark: #311b00;
+    --body-color: #5f4b32;
+    --body-color-2: #948067;
+    --bg-color: #f9f1db;
+    --bg-color-2: #f2e9cd;
+    --bg-color-3: #d9c7ab;
+  }
+  body {
+    font-family: var(--font-body);
+    color: var(--text-body);
+    font-size: var(--font-size-base);
+  }
+  h1,
+  h2 {
+    font-family: var(--font-heading);
+  }
+
+  a,
+  a:visited {
+    color: var(--accent);
+    text-decoration: underline dashed;
+  }
 </style>
