--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -34,7 +34,7 @@ import Nav from "../components/Nav.astro";
     --font-size-xxl: clamp(2.44rem, 2.38vw + 1.85rem, 3.75rem);
     --font-size-xxxl: clamp(3.05rem, 3.54vw + 2.17rem, 5rem);
 
-    --font-heading: "Chicago", system-ui, -apple-system, BlinkMacSystemFont,
+    --font-heading: "Sriracha", system-ui, -apple-system, BlinkMacSystemFont,
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
 
@@ -78,6 +78,6 @@ import Nav from "../components/Nav.astro";
   a,
   a:visited {
     color: var(--accent);
-    text-decoration: underline dashed;
+    text-decoration: dotted underline;
   }
 </style>
