feat: spend way too long on colors and switches:w

--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -1,6 +1,6 @@
 ---
 type Props = {
-    color: "orange" | "green" | "purple";
+    color: "red" | "purple" | "green";
 };
 
 const { color } = Astro.props;
