--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,8 +24,8 @@ import Nav from "../components/Nav.astro";
 
   :root {
     --green: #24ac6c;
-    --orange: #e46a4e;
-    --purple: #7931e3;
+    --red: #F3270B;
+    --purple: #6200FF;
     --font-size-sm: clamp(0.8rem, 0.17vw + 0.76rem, 0.89rem);
     --font-size-base: clamp(1rem, 0.34vw + 0.91rem, 1.19rem);
     --font-size-md: clamp(1.25rem, 0.61vw + 1.1rem, 1.58rem);
