--- a/public/fonts.css
+++ b/public/fonts.css
@@ -1,10 +1,6 @@
- 
-@font-face{
-    font-family: Chicago;
-    src: url('/fonts/ChicagoFLF.ttf'); 
-}
 
-@font-face{
+@font-face {
     font-family: Sriracha;
     src: url('/fonts/Sriracha-Regular.ttf'); 
+    font-display: swap; 
 }
