--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,7 @@ import riveWASMResource from "@rive-app/canvas/rive.wasm?url";
     <Heading />
     <article>
       <InBrief />
+      <InBrief />
     </article>
   </main>
 </BaseLayout>
