refactor: move css base to src

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -40,9 +40,9 @@ import Nav from "../components/Nav.svelte";
 
 <style is:global>
   @import "open-props/style";
-  @import "/fonts.css";
-  @import "/normalize.css";
-  @import "/reset.css";
+  @import "../fonts.css";
+  @import "../normalize.css";
+  @import "../reset.css";
 
   :root {
     --green: #24ac6c;
